# bag_recorder_ros2

./: CHANGELOG.md  README.md  README_zh.md  package.xml  setup.py
bag_recorder/: bag_recorder_node.py
config/: record_topics.yaml
launch/: bag_recorder.launch.py
